Fix: improved calendar arrows contrast (dark background + white icons)

--- a/client/src/BookingForm.css
+++ b/client/src/BookingForm.css
@@ -244,7 +244,7 @@ body {
 /* Стили для стрелок */
 .react-calendar__navigation__prev-button,
 .react-calendar__navigation__next-button {
-  background-color: transparent;
+  background-color: #3a2d5f; /* тёмно-фиолетовый */
   background-repeat: no-repeat;
   background-position: center;
   background-size: 16px 16px;
@@ -259,12 +259,11 @@ body {
 
 /* Левая стрелка (SVG) */
 .react-calendar__navigation__prev-button {
-  background-image: url("data:image/svg+xml;utf8,<svg fill='%23b08aff' height='16' viewBox='0 0 24 24' width='16' xmlns='http://www.w3.org/2000/svg'><path d='M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z'/></svg>");
+  background-image: url("data:image/svg+xml;utf8,<svg fill='%23ffffff' height='16' viewBox='0 0 24 24' width='16' xmlns='http://www.w3.org/2000/svg'><path d='M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z'/></svg>");
 }
-
 /* Правая стрелка (SVG) */
 .react-calendar__navigation__next-button {
-  background-image: url("data:image/svg+xml;utf8,<svg fill='%23b08aff' height='16' viewBox='0 0 24 24' width='16' xmlns='http://www.w3.org/2000/svg'><path d='M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6z'/></svg>");
+  background-image: url("data:image/svg+xml;utf8,<svg fill='%23ffffff' height='16' viewBox='0 0 24 24' width='16' xmlns='http://www.w3.org/2000/svg'><path d='M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6z'/></svg>");
 }
 
 /* Hover эффекты */
